# voxtube

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  package.json
.features/core-app/: .build-feature-state.json  plan.md  tasks.md  understanding.md
.features/transcript-summarization/: .build-feature-state.json  plan.md  tasks.md  understanding.md
docs/: ARCHITECTURE.md
public/: app.js  index.html  style.css
specs/001-tauri-desktop/: .multimodel-state.json  analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tauri-desktop/checklists/: requirements.md
specs/001-tauri-desktop/review-rounds/: round-1-fixes.md  round-1-issues.md  round-2-fixes.md  round-2-issues.md  round-3-approved.md  round-3-fixes.md
src/: cli.ts  config.ts  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: error.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/routes/: history.ts  summarize.ts  synthesize.ts  transcript.ts  voices.ts
src/services/: anthropic.ts  cache.ts  kokoro.ts  youtube.ts
tests/: paths.test.js
