[package]
name = "voxtube"
version = "0.1.0"
description = "VoxTube Desktop"
authors = []
edition = "2021"

[lib]
name = "voxtube_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
